[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-iot-tunnel"
version = "0.3"
description = "A script to set up and manage a secure tunnel to an AWS IoT device"
readme = { file = "README.md", content-type = "text/markdown" }  # Updated format
authors = [
  { name = "Saurabh Jarial", email = "saurabh.jarial@smartdings.com" }
]
dependencies = [
  "boto3>=1.20.0",
  "docker>=4.0.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
requires-python = ">=3.6"
urls = { "Homepage" = "https://github.com/smartdings/aws-development-tools" }

[project.scripts]
aws-iot-tunnel = "aws_iot_tunnel.aws_iot_tunnel:main"